--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -122,7 +122,63 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 
 ### 에러 전파하기
 실패의 가능성이 있는 함수를 작성할 때, 해당 **함수 내에서** 처리하는 대신, **에러를 호출하는 코드 쪽으로 반환**하여 처리
-* 더 많은 정보와 로직, 제어권
+* 더 많은 정보와 로직, 제어권 확보
+* 사용 예시와 설명
+  <br>
+
+  ```rust
+  use std::io;
+  use std::io::Read;
+  use std::fs::File;
+  
+  fn read_username_from_file() -> Result<String, io::Error> {
+      let f = File::open("hello.txt");
+  
+      let mut f = match f {
+          Ok(file) => file,
+          Err(e) => return Err(e),
+      };
+  
+      let mut s = String::new();
+  
+      match f.read_to_string(&mut s) {
+          Ok(_) => Ok(s),
+          Err(e) => Err(e),  // 함수 마지막 표현식이라 return 명시할 필요 없음
+      }
+  }
+  ```
+    * 함수를 호출한 코드는 ```String``` 담은 값을 리턴
+    * 문제 발생 시 ```Err``` 리턴
+    * ```File::open``` 함수와 ```read_to_string``` 메소드 둘 다 ```io::Error``` 타입의 에러값 반환
+    * 함수의 메인인 ```File::open```가 성공하면 파일을 ```f```에 저장하고 계속 진행
+    * ```read_to_string``` 메소드를 호출하여 파일의 콘텐츠를 읽어 ```s```에 넣음
+        * 성공 시 ```s``` 내의 파일을 ```Ok```에 집어넣어 리턴
+<br>
+
+### ```?```: 에러를 전파하는 연산
+* ```Result``` 값 뒤에 ```?```가 위치해있음으로써, 값이 ```Ok```라면 Ok 내 값을 받고 이후 코드 진행 / ```Err```라면 전체 함수로부터 Err 내 값 반환하는 역할을 함
+* 반환 타입에 정의된 에러 타입으로 변환되어, **여러 에러들을 하나의 특정 에러 타입으로 통일하여 처리**할 수 있음
+* 보일러플레이트를 제거해주고 함수 구현을 단순화 
+* 예시
+  <br>
+
+  ```rust
+  let mut f = File::open("hello.txt")?;
+  ```
+* chaining을 활용하여 코드 단순화하기 (아래는 같은 역할의 두 코드임)
+  <br>
+
+  ```rust
+  let mut f = File::open("hello.txt")?;
+  f.read_to_string(&mut s)?;
+  ```
+  ```rust
+  File::open("hello.txt")?.read_to_string(&mut s)?;
+  ```
+* ```?```은 Result를 리턴하는 함수에서만 사용됨!!
+    * 반환 타입이 ```()```인 main 함수에서는 에러 발생
+    * 위 예제들의 반환 타입은 ```Result<String, io::Error>```였음
+<br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
 ┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것<br>
