--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -108,7 +108,7 @@ match 구문과 비슷한 역할을 하는 ```unwrap``` 메소드
 ```rust
 let f = File::open("hello.txt").unwrap();
 ```
-<br><br>
+<br>
 
 ```expect``` 메소드
 * 에러 메시지의 내용을 설정할 수 있어, 패닉 메시지를 파악하기 쉬워짐
@@ -184,7 +184,6 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 ┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것<br>
 │<Br>
 └ ```Result``` 사용 → 바로 코드의 복구 가능성을 따지기보다는, 옵션을 제공하는 것
-
-### 에러 처리
+* 에러 처리 코드 길게 적기보다는 ```unwrap``` 또는 ```expect``` 메소드 사용하기!
 
 <br>
