--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -185,5 +185,6 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 │<Br>
 └ ```Result``` 사용 → 바로 코드의 복구 가능성을 따지기보다는, 옵션을 제공하는 것
 * 에러 처리 코드 길게 적기보다는 ```unwrap``` 또는 ```expect``` 메소드 사용하기!
+* 컴파일러를 통해 로직을 한 번 더 검증하고 싶다면 ```unwrap```을 쓰는 것도 좋은 방법임
 
 <br>
