--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -181,10 +181,15 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 <br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
-┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것<br>
+### ```panic!```과 ```Result```를 적절히 사용하기
+┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것 / 희망이 안 보일 때 ...<br>
 │<Br>
-└ ```Result``` 사용 → 바로 코드의 복구 가능성을 따지기보다는, 옵션을 제공하는 것
+└ ```Result``` 사용 → 바로 코드의 복구 가능성을 따지기보다는, 옵션을 제공하는 것 / 예상이 되는 경우
 * 에러 처리 코드 길게 적기보다는 ```unwrap``` 또는 ```expect``` 메소드 사용하기!
 * 컴파일러를 통해 로직을 한 번 더 검증하고 싶다면 ```unwrap```을 쓰는 것도 좋은 방법임
+<br>
+
+### 유효성을 위한 커스텀 타입 생성하기
+
 
 <br>
