--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -190,6 +190,53 @@ let f = File::open("hello.txt").expect("Failed to open hello.txt");
 <br>
 
 ### 유효성을 위한 커스텀 타입 생성하기
+커스텀 타입인 ```Guess``` 예제를 통해 알아보기
+
+1. 구조체 선언
+2. 타입과 조건을 명시한 함수
+3. 조건에 따른 패닉 매크로 사용
+
+```rust
+╭─redzzzi in ~/firstrust/rustlang/example/unit09/src on master✘✘✘ 23-07-18 - 17:05:07
+╰─⠠⠵ cat main.rs
+pub struct Guess {
+    value: u32,
+}
+
+impl Guess {
+    pub fn new(value: u32) -> Guess {
+        if value < 1 || value > 100 {
+            panic!("Guess value must be between 1 and 100, got {}.", value);
+        }
+
+        Guess {
+            value
+        }
+    }
+
+    pub fn value(&self) -> u32 {
+        self.value
+    }
+}
+
+fn main() {
+    let guess1 = Guess::new(42);
+    let guess2 = Guess::new(101);
+
+
+    println!("Guess value: {}", guess1.value());
+    println!("Guess value: {}", guess2.value());
+}
+```
+```rust
+╭─redzzzi in ~/firstrust/rustlang/example/unit09/src on master✘✘✘ 23-07-18 - 17:05:09
+╰─⠠⠵ cargo run
+   Compiling unit09 v0.1.0 (/home/redzzzi/firstrust/rustlang/example/unit09)
+    Finished dev [unoptimized + debuginfo] target(s) in 0.09s
+     Running `/home/redzzzi/firstrust/rustlang/example/unit09/target/debug/unit09`
+thread 'main' panicked at 'Guess value must be between 1 and 100, got 101.', src/main.rs:8:13
+note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
+```
 
 
 <br>
