--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -1,1 +1,7 @@
+# 📜 10 Generic Types, Traits, and Lifetimes
+[Generic Types](#1-generic-data-types)&emsp;&emsp;[Traits](#2-traits-defining-shared-behavior)&emsp;&emsp;[Lifetimes](#3-validating-references-with-lifetimes)
+<br><br>
 
+# 1. Generic Data Types
+# 2. Traits: Defining Shared Behavior
+# 3. Validating References with Lifetimes
