--- a/rustlang/12_커맨드라인프로그램.md
+++ b/rustlang/12_커맨드라인프로그램.md
@@ -1,1 +1,31 @@
+# 📜 12 An I/O Project: Building a Command Line Program
+1. [Accepting command line arguments](#1-accepting-command-line-arguments)<br>
+2. [Reading a file](#2-reading-a-file)<br>
+3. [Refactoring](#3-refactoring-to-improve-modularity-and-error-handling)<br>
+4. [Test driven development](#4-developing-the-librarys-functionality-with-test-driven-development)<br>
+5. [Environment variables](#5-working-with-environment-variables)<br>
+6. [error msg by Standard Error](#6-writing-error-msg-to-standard-error-instead-of-standard-output)
+<br><br>
+
+# 1. Accepting Command Line Arguments
+
+<br>
+
+# 2. Reading a File
+
+<br>
+
+# 3. Refactoring to Improve Modularity and Error Handling
+
+<br>
+
+# 4. Developing the Library's Functionality with Test Driven Development
+
+<br>
+
+# 5. Working with Environment Variables
+
+<br>
+
+# 6. Writing Error Msg to Standard Error instead of Standard Output
 
