--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -1,5 +1,28 @@
 # 📜 10 Generic Types, Traits, and Lifetimes
 [Generic Types](#1-generic-data-types)&emsp;&emsp;[Traits](#2-traits-defining-shared-behavior)&emsp;&emsp;[Lifetimes](#3-validating-references-with-lifetimes)
+<br>
+
+---
+#### ```Generic```
+<pre>
+  제네릭<i>generic</i><br>
+    📍 복제를 효율적으로 다룰 수 있는 도구 중 하나
+    📍 구체적인 타입이나 타 속성에 대해 추상적인 대행 역할을 함
+    📍 예시: Option&lt;T&gt;, Vec&lt;T&gt;, HashMap&lt;K, V&gt;, Result&lt;T, E&gt;
+</pre>
+#### ```Trait```
+<pre>
+  트레잇<i>trait</i><br>
+    📍 동작을 제네릭 방식으로 정의하는 방법
+    📍 제네릭 타입과 결합하여 특정 동작하는 타입으로 제한할 수 있음
+</pre>
+#### ```Lifetime```
+<pre>
+  라이프타임<i>lifetime</i><br>
+    📍 참조자의 연관성에 대한 정보를 컴파일러에게 주는 제네릭의 일종
+</pre>
+---
+
 <br><br>
 
 # 1. Generic Data Types
