--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -21,6 +21,90 @@
   라이프타임<i>lifetime</i><br>
     📍 참조자의 연관성에 대한 정보를 컴파일러에게 주는 제네릭의 일종
 </pre>
+#### ```Extracting a Function - finding the largest num```
+  <details>
+  <summary>하나의 숫자 리스트에서 가장 큰 수 찾기!</summary>
+  <div markdown="1">
+
+  ```rust
+  fn main() {
+      let numbers = vec![34, 50, 25, 100, 65];
+  
+      let mut largest = numbers[0];
+  
+      for number in numbers {
+          if number > largest {
+              largest = number;
+          }
+      }
+  
+      println!("The largest number is {}", largest);
+  }
+  ```
+  </details>
+  <details>
+  <summary>두 숫자 리스트에서 가장 큰 수 찾기!</summary>
+  <div markdown="1">
+
+  ```rust
+  fn main() {
+      let numbers = vec![34, 50, 25, 100, 65];
+  
+      let mut largest = numbers[0];
+  
+      for number in numbers {
+          if number > largest {
+              largest = number;
+          }
+      }
+  
+      println!("The largest number is {}", largest);
+  
+      let numbers = vec![102, 34, 6000, 89, 54, 2, 43, 8];
+  
+      let mut largest = numbers[0];
+  
+      for number in numbers {
+          if number > largest {
+              largest = number;
+          }
+      }
+  
+      println!("The largest number is {}", largest);
+  }
+  ```
+  </details>
+  <details>
+  <summary>추상화된 코드로 가장 큰 수 찾기!</summary>
+  <div markdown="1">
+
+  ```rust
+  fn largest(list: &[i32]) -> i32 {
+      let mut largest = list[0];
+  
+      for &item in list.iter() {
+          if item > largest {
+              largest = item;
+          }
+      }
+  
+      largest
+  }
+  
+  fn main() {
+      let numbers = vec![34, 50, 25, 100, 65];
+  
+      let result = largest(&numbers);
+      println!("The largest number is {}", result);
+  
+      let numbers = vec![102, 34, 6000, 89, 54, 2, 43, 8];
+  
+      let result = largest(&numbers);
+      println!("The largest number is {}", result);
+  }
+  ```
+  </details>
+
 ---
 
 <br><br>
