--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -73,6 +73,9 @@
       println!("The largest number is {}", largest);
   }
   ```
+  * 한 프로그램 내 동일한 두 개의 로직이 존재하지만 잘 동작함
+
+  * 코드 중복 적용 → 오류 발생률 증가, 로직 바꾸려고 하면 번거로움
   </details>
   <details>
   <summary>추상화된 코드로 가장 큰 수 찾기!</summary>
