--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -94,7 +94,7 @@
       largest
   }
   
-  fn main() {
+  fn main() {  // 프로그램의 진입점
       let numbers = vec![34, 50, 25, 100, 65];
   
       let result = largest(&numbers);
@@ -106,6 +106,8 @@
       println!("The largest number is {}", result);
   }
   ```
+  * ```list.iter()```: 슬라이스의 iterator 생성하는 함수
+  * 가장 큰 수를 찾는 함수를 만들어놓고 특정 경우에 대입
   </details>
 
 ---
