--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -109,13 +109,39 @@
   * ```list.iter()```: 슬라이스의 iterator 생성하는 함수
   * 가장 큰 수를 찾는 함수를 만들어놓고 특정 경우에 대입
   </details>
-
+  
 ---
-
-<br><br>
+<br>
 
 # 1. Generic Data Types
+<details>
+<summary><code>가장 큰 수를 찾는 함수의 제네릭 예시</code></summary>
+<div markdown="1">
 
+<br>
+
+  ```rust
+  // 어떤 타입 T를 이용한 제네릭인 largest
+  //
+  fn largest<T>(list: &[T]) -> T {
+      let mut largest = list[0];
+  
+      for &item in list.iter() {
+          if &item > largest {
+              largest = item;
+          }
+      }
+  
+      largest
+  }
+  ```
+  * 하지만 위 함수를 이용해 실행시키면 컴파일 에러가 뜸.
+
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/23528a9d-56cf-4c45-b8dc-8f4535318cf8" width="700px"><br>
+  
+  * 해당 오류는 모두 위에서 언급했던 <i>trait</i>인 <code>std::cmp::PartialOrd</code> 때문임!!
+  * 컴파일 에러 원인: 타입 T를 선언했다고 해서 모든 타입에 대해 동작하는 것이 아니기 때문.
+</details>
 <br>
 
 # 2. Traits: Defining Shared Behavior
