--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -144,6 +144,50 @@
 </details>
 <br>
 
+### ```Generic Type - Struct```
+```rs
+// T라는 하나의 타입의 값 x와 y를 갖는 Point 구조체
+struct Point<T> {
+    x: T,  // x와 y 모두 T라는 같은 제네릭 타입을 가짐!!
+    y: T,  // 같.은.타.입. 이어야 함!
+}
+
+//---[1]---//
+fn main() {
+    let integer = Point { x: 5, y: 10 };
+    let float = Point { x: 1.2, y: 4.5};
+
+    println!("x is {} and y is {}", integer.x, integer.y);
+    println!("x is {} and y is {}", float.x, float.y);
+}
+
+//---[2]---//
+fn main() {
+    let not_work = Point { x: 5, y: 4.0 };
+
+    println!("x is {} and y is {}", not_work.x, not_work.y);
+}
+
+
+//---[3] T와 U라는 두 타입의 각각 값 x와 y를 갖는 Point 구조체---//
+struct Point<T, U> {
+    x: T,
+    y: U,
+}
+
+fn main() {
+    let both_integer = Point { x: 5, y: 10};
+    let both_float = Point { x: 1.2, y: 4.5 };
+    let integer_and_float = Point { x: 5, y: 4.3 };
+
+    println!("When both are integers, x: {}, y: {}", both_integer.x, both_integer.y);
+    println!("When both are floats, x: {}, y: {}", both_float.x, both_float.y);
+    println!("Each is int and float, x: {}, y: {}", integer_and_float.x, integer_and_float.y);
+}
+```
+### ```Generic Type - Enum```
+### ```Generic Type - Method```
+
 # 2. Traits: Defining Shared Behavior
 
 <br>
