--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -144,7 +144,7 @@
 </details>
 <br>
 
-### ```Generic Type - Struct```
+## ```Generic Type - Struct```
 ```rs
 // T라는 하나의 타입의 값 x와 y를 갖는 Point 구조체
 struct Point<T> {
@@ -185,8 +185,13 @@ fn main() {
     println!("Each is int and float, x: {}, y: {}", integer_and_float.x, integer_and_float.y);
 }
 ```
-### ```Generic Type - Enum```
-### ```Generic Type - Method```
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/df0cbbeb-561a-4a2a-89fe-985d381becf1" width="600px">
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/a6fb9c09-cbf7-4e99-bab5-bb7d4f6d2cb8" width="600px">
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/d9df1664-7949-4a12-8dbe-f0849f37435d" width="600px">
+
+
+## ```Generic Type - Enum```
+## ```Generic Type - Method```
 
 # 2. Traits: Defining Shared Behavior
 
