--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -185,10 +185,25 @@ fn main() {
     println!("Each is int and float, x: {}, y: {}", integer_and_float.x, integer_and_float.y);
 }
 ```
-<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/df0cbbeb-561a-4a2a-89fe-985d381becf1" width="600px">
-<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/a6fb9c09-cbf7-4e99-bab5-bb7d4f6d2cb8" width="600px">
-<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/d9df1664-7949-4a12-8dbe-f0849f37435d" width="600px">
+<div align="center"><img src="https://github.com/redzzzi/Rust23summer/assets/127263392/df0cbbeb-561a-4a2a-89fe-985d381becf1" width="600px"></div>
+<br>
 
+* 각각 x와 y의 타입이 같기 때문에 출력이 제대로 됨
+
+<pre>💡참고💡<br><br>정수형이나 실수형과 같은 숫자 타입의 리터럴에서, 소수점이 없는 숫자는 <b>정수</b>로 인식됨</pre> 
+<br>
+
+<div align="center"><img src="https://github.com/redzzzi/Rust23summer/assets/127263392/a6fb9c09-cbf7-4e99-bab5-bb7d4f6d2cb8" width="600px"></div>
+<br>
+
+* 주어진 값을 보면, x와 y의 타입이 각각 int와 float로 다르므로 에러가 발생
+* 에러 메시지에서도 *floating-point num의 자리에 integer가 요구됨*을 알려주고 있음
+<br>
+
+<div align="center"><img src="https://github.com/redzzzi/Rust23summer/assets/127263392/d9df1664-7949-4a12-8dbe-f0849f37435d" width="600px"></div>
+<br>
+
+* T와 U라는 다를 수 있는 두 타입을 선언하면서 출력에 제약이 생기지 않음
 
 ## ```Generic Type - Enum```
 ## ```Generic Type - Method```
