--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -206,6 +206,22 @@ fn main() {
 * T와 U라는 다를 수 있는 두 타입을 선언하면서 출력에 제약이 생기지 않음
 
 ## ```Generic Type - Enum```
+```rs
+╭─redzzzi in ~/firstrust/rustlang/example/unit10/src on master ✘ 23-07-26 - 2:14:21
+╰─⠠⠵ cat enum_generic.rs
+// Option 열거형
+enum Option<T> {
+    Some(T),
+    None,
+}
+
+// Result 열거형
+enum Resulti<T, E> {   // 파일 열기 수행 시
+    Ok(T),             // 파일이 제대로 열렸다면: T에 std::fs::File 타입 값이 채워짐
+    Err(E),            // 문제가 생겼다면: E에 std::io::Error 타입 값이 채워짐
+}
+```
+
 ## ```Generic Type - Method```
 
 # 2. Traits: Defining Shared Behavior
