--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -223,6 +223,32 @@ enum Resulti<T, E> {   // 파일 열기 수행 시
 ```
 
 ## ```Generic Type - Method```
+```rs
+struct Point<T> {
+    x: T,  // x 필드
+    y: T,  // y 필드
+}
+
+//---x라는 메소드 정의---//
+impl<T> Point<T> {  // Point<T> 구조체 상에 만들어지는 메소드.
+    fn x(&self) -> &T {  //시그니처: 'T 타입'의 x 필드에 대한 참조자를 반환함.
+        &self.x          //          &self를 인자로 받아 T 타입 값을 불변 참조 &T로 반환
+    }
+}
+
+fn main() {
+    let p = Point { x: 5, y: 10 };
+
+    println!("p.x = {}", p.x());
+    //메소드 정의 안해서 컴파일 에러 뜸> println!("p.y = {}", p.y());
+}
+```
+* ```Point<T>```의 타입에 메소드를 활용하고자 한다면 아래와같은 형식을 갖추어야 함.
+```shell
+impl<제네릭타입> 구조체이름<제네릭타입> {
+    // 메소드 내용 블라블라
+}
+```
 
 # 2. Traits: Defining Shared Behavior
 
