--- a/rustlang/10_제네릭트레잇라이프타임.md
+++ b/rustlang/10_제네릭트레잇라이프타임.md
@@ -223,6 +223,7 @@ enum Resulti<T, E> {   // 파일 열기 수행 시
 ```
 
 ## ```Generic Type - Method```
+### one generic type
 ```rs
 struct Point<T> {
     x: T,  // x 필드
@@ -248,6 +249,36 @@ fn main() {
 impl<제네릭타입> 구조체이름<제네릭타입> {
     // 메소드 내용 블라블라
 }
+```
+
+### two generic types
+```rs
+//---구조체 정의에서와는 다른 제네릭 타입을 사용하는 메소드의 케이스---//
+struct Point<T, U> {
+    x: T,
+    y: U,
+}
+
+impl<T, U> Point<T, U> {
+    fn mixup<V, W>(self, other: Point<V, W>) -> Point<T, W> { // 두 개의 인스턴스를 받아 새로운 인스턴스 생성
+        Point {
+            x: self.x,   // 첫 번째 인스턴스의 x 값 참조
+            y: other.y,  // 두 번째 인스턴스의 y 값 참조
+        }
+    }
+}
+
+fn main() {
+    let p1 = Point { x: 5, y: 10.4 }; // 5 > type: i32, 10.4 > type: f64
+    let p2 = Point { x: "Hello", y: 'c'}; // "Hello" > type: &str, 'c' > type: char
+
+    let p3 = p1.mixup(p2);
+
+    println!("p3.x = {}, p3.y = {}", p3.x, p3.y);
+}
+```
+```
+p3.x = 5, p3.y = c // 메소드에 의해 생성된 새로운 인스턴스의 x, y 값
 ```
 
 # 2. Traits: Defining Shared Behavior
